// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App SwitchTheme Test SwitchTheme with dark mode 1`] = `
.c0 {
  touch-action: pan-x;
  display: inline-block;
  position: relative;
  cursor: pointer;
  background-color: transparent;
  border: 0;
  padding: 0;
}

.c1 {
  width: 50px;
  height: 24px;
  padding: 0;
  border-radius: 30px;
  background-color: #4d4d4d;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.c2 {
  position: absolute;
  width: 14px;
  height: 10px;
  top: 0;
  bottom: 0;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 0;
  left: 8px;
  opacity: 0;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c4 {
  position: absolute;
  width: 10px;
  height: 10px;
  top: 0;
  bottom: 0;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 0;
  right: 10px;
  opacity: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 10px;
}

.c5 {
  -webkit-transition: all 0.5s cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: all 0.5s cubic-bezier(0.23,1,0.32,1) 0ms;
  position: absolute;
  top: 1px;
  left: 1px;
  width: 22px;
  height: 22px;
  border: 1px solid #4d4d4d;
  border-radius: 50%;
  background-color: #fafafa;
  box-sizing: border-box;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  box-shadow: 0 0 2px 3px #0099e0;
}

.c6 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <div
    class="c0"
    data-testid="switch-theme"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="track-light-mode"
      >
        <div
          class="c3"
        >
          <span
            aria-hidden="false"
            aria-label="middle-moon"
            class="emoji"
            role="img"
          >
            🌜
          </span>
        </div>
      </div>
      <div
        class="c4"
        data-testid="track-dark-mode"
      >
        <div
          class="c3"
        >
          <span
            aria-hidden="false"
            aria-label="sun"
            class="emoji"
            role="img"
          >
            🌞
          </span>
        </div>
      </div>
    </div>
    <div
      class="c5"
      data-testid="switch-toggle-thumb"
    />
    <input
      aria-label="Dark mode toggle"
      class="c6"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`App SwitchTheme Test SwitchTheme with light mode 1`] = `
.c0 {
  touch-action: pan-x;
  display: inline-block;
  position: relative;
  cursor: pointer;
  background-color: transparent;
  border: 0;
  padding: 0;
}

.c1 {
  width: 50px;
  height: 24px;
  padding: 0;
  border-radius: 30px;
  background-color: #4d4d4d;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.c2 {
  position: absolute;
  width: 14px;
  height: 10px;
  top: 0;
  bottom: 0;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 0;
  left: 8px;
  opacity: 1;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c4 {
  position: absolute;
  width: 10px;
  height: 10px;
  top: 0;
  bottom: 0;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 0;
  right: 10px;
  opacity: 0;
  -webkit-transition: opacity 0.25s ease;
  transition: opacity 0.25s ease;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 10px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 10px;
}

.c5 {
  -webkit-transition: all 0.5s cubic-bezier(0.23,1,0.32,1) 0ms;
  transition: all 0.5s cubic-bezier(0.23,1,0.32,1) 0ms;
  position: absolute;
  top: 1px;
  left: 27px;
  width: 22px;
  height: 22px;
  border: 1px solid #4d4d4d;
  border-radius: 50%;
  background-color: #fafafa;
  box-sizing: border-box;
  -webkit-transition: all 0.25s ease;
  transition: all 0.25s ease;
  box-shadow: 0 0 2px 3px #0099e0;
}

.c6 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div>
  <div
    class="c0"
    data-testid="switch-theme"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="track-light-mode"
      >
        <div
          class="c3"
        >
          <span
            aria-hidden="false"
            aria-label="middle-moon"
            class="emoji"
            role="img"
          >
            🌜
          </span>
        </div>
      </div>
      <div
        class="c4"
        data-testid="track-dark-mode"
      >
        <div
          class="c3"
        >
          <span
            aria-hidden="false"
            aria-label="sun"
            class="emoji"
            role="img"
          >
            🌞
          </span>
        </div>
      </div>
    </div>
    <div
      class="c5"
      data-testid="switch-toggle-thumb"
    />
    <input
      aria-label="Dark mode toggle"
      checked=""
      class="c6"
      type="checkbox"
    />
  </div>
</div>
`;
